@@ -1,0 +1,49 @@
+#!/bin/bash
+##########################################################
+# (C) ZE CMS, Humboldt-Universiteat zu Berlin
+# Written 2012 by Daniel Rohde <d.rohde@cms.hu-berlin.de>
+##########################################################
+# Kerberos ticket lifetime:
+# 6h = 21600s
+
+test -z "$TICKET_LIFETIME" && TICKET_LIFETIME=21600
+
+##########################################################
+
+umask 0077
+
+remote_user="$REMOTE_USER"
+test -z "$remote_user" && remote_user="$REDIRECT_REMOTE_USER"
+
+ticketfn="/tmp/krb5cc_webdavcgi_$remote_user"
+
+KRB5CCNAME="FILE:$ticketfn"
+export KRB5CCNAME
+
+WEBDAVISWRAPPED=1
+export WEBDAVISWRAPPED
+
+if test -n "$AUTHHEADER" ; then
+	# password auth:
+	if test -n "$SMBWORKGROUP" ; then
+		SMBUSER=$remote_user;
+		SMBPASSWORD=`echo $AUTHHEADER | cut -d' ' -f2 | base64 -d | cut -d: -f2`
+		export SMBUSER
+		export SMBPASSWORD
+	# Kerberos auth:
+	else
+		if test -f "$ticketfn" ; then
+			mtime=`stat -c %Y "$ticketfn.age"`
+			time=`date +%s`
+			test `expr $time - $mtime` -ge $TICKET_LIFETIME && rm -f "$ticketfn" "$ticketfn.age"
+		fi
+		if test ! -f "$ticketfn" ; then
+			(
+				flock -x -w 10 9 || exit 1
+				echo $AUTHHEADER | cut -d' ' -f2 | base64 -d | cut -d: -f2 | kinit "$remote_user" 1>/dev/null 2>&1 && touch "$ticketfn.age"
+			) 9> "${ticketfn}.flock"
+		fi
+	fi	
+fi
+
+exec ./webdav.pl
